
* Reduced the time in which fvwm attempts to grab the pointer.

* Fixed unmanaged window when window was mapped/unmapped/mapped too
  fast.

* Fixed MiniScroll's auto repeating in FvwmScript.

* Fixed a crash with the UseStyle style in combination with
  HilightBack.

* Fixed excessive redraws of the windows under a window being shaded.

* Fixed a minor memory leak in the Style command.

Changes in stable release 2.4.4 (16-Dec-2001)

* Minor title drawing fixes.

* Fixed manual placement with Xinerama.

* Minor button 3 handling fix in FvwmPager.

* Fixed *FvwmIconMan*shaped option with empty managers.

* Fixed ClickToFocusClickRaises style.

* FvwmForm: Customize pointers, support ISO_Tab key, buttons can activate
  on press or release, special pointer during grab, arrow keys useful in form
  with one input field.

* New OpaqueMoveSize argument "unlimited".

* Fixed binding keys with and without "Shift" modifier under some
  circumstances.

* Fixed binding actions to the client window with ClickToFocus.

* Mouse bindings are activated without a recapture.

* FvwmScript: new keyboard bindings. New flags NoFocus and Left, Center,
  and Right for text position. Amelioration of the Menu and PopupMenu
  Widgets. New functions GetPid, Parse, SendMsgAndGet and LastString.
  New instruction Key for key bindings. New command SendToModule ScriptName
  SendString.

* Command "Silent" when precedes "Key", "Mouse" and "PointerKey"
  disables warning messages.

* Restored the default Alt-Tab behaviour from 2.4.0.

Changes in stable release 2.4.3 (08-Oct-2001)

* Fixed activation of shape extension.

* Fixed problems with overriding key bindings.

* Single letter key names are allowed in upper and lower case in
  key bindings as before 2.4.0.

* Fixed WindowList placement with Xinerama.

* Fixed flickering icon titles.

* New X resource fvwmscreen to select the Xinerama screen on which to
  place new windows.

* Coordinates of a window during motion are show relative to the